// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`balanceManager PTB snapshots > balanceManagerReferralOwner 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "balance_manager_referral_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000abcd",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > balanceManagerReferralPoolId 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "balance_manager_referral_pool_id",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000abcd",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > checkManagerBalance 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "balance",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > createAndShareBalanceManager 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [],
        "function": "new",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
        "function": "public_share_object",
        "module": "transfer",
        "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "typeArguments": [
          "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24::balance_manager::BalanceManager",
        ],
      },
    },
  ],
  "inputs": [],
}
`;

exports[`balanceManager PTB snapshots > createBalanceManagerWithOwner 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "pure",
          },
        ],
        "function": "new_with_custom_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAur4=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > depositIntoManager 1`] = `
{
  "commands": [
    {
      "$Intent": {
        "data": {
          "balance": 1000000000n,
          "outputKind": "coin",
          "type": "gas",
        },
        "inputs": {},
        "name": "CoinWithBalance",
      },
      "$kind": "$Intent",
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
        "function": "deposit",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > depositWithCap 1`] = `
{
  "commands": [
    {
      "$Intent": {
        "data": {
          "balance": 1000000000n,
          "outputKind": "coin",
          "type": "gas",
        },
        "inputs": {},
        "name": "CoinWithBalance",
      },
      "$kind": "$Intent",
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
        "function": "deposit_with_cap",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x4444444444444444444444444444444444444444444444444444444444444444",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000c0c0",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > generateProof 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > generateProofAsOwner 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > generateProofAsTrader 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_trader",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000c0c0",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > getBalanceManagerReferralId 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "get_balance_manager_referral_id",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > id 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "id",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > mintDepositCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "mint_deposit_cap",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > mintTradeCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "mint_trade_cap",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > mintWithdrawalCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "mint_withdraw_cap",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > owner 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > registerBalanceManager 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "register_balance_manager",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > revokeTradeCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "revoke_trade_cap",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq80=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > setBalanceManagerReferral 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "set_balance_manager_referral",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000c0c0",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000abcd",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > shareBalanceManager 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "pure",
          },
        ],
        "function": "new_with_custom_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
        "function": "public_share_object",
        "module": "transfer",
        "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "typeArguments": [
          "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24::balance_manager::BalanceManager",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAur4=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > unsetBalanceManagerReferral 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "unset_balance_manager_referral",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000c0c0",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > withdrawAllFromManager 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "withdraw_all",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
    {
      "$kind": "TransferObjects",
      "TransferObjects": {
        "address": {
          "$kind": "Input",
          "Input": 1,
          "type": "pure",
        },
        "objects": [
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAur4=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > withdrawFromManager 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "withdraw",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
    {
      "$kind": "TransferObjects",
      "TransferObjects": {
        "address": {
          "$kind": "Input",
          "Input": 2,
          "type": "pure",
        },
        "objects": [
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAur4=",
      },
    },
  ],
}
`;

exports[`balanceManager PTB snapshots > withdrawWithCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
        ],
        "function": "withdraw_with_cap",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x4444444444444444444444444444444444444444444444444444444444444444",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000c0c0",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > addStableCoin 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "add_stablecoin",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > adjustMinLotSize 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "object",
          },
        ],
        "function": "adjust_min_lot_size_admin",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > adjustTickSize 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "object",
          },
        ],
        "function": "adjust_tick_size_admin",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "6AMAAAAAAAA=",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > authorizeMarginApp 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "authorize_app",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0xb8620c24c9ea1a4a41e79613d2b3d1d93648d1bb6f6b789a7c8f261c94110e4b::margin_manager::MarginApp",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > corePauseCaps 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "allowed_pause_caps",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > createPoolAdmin 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 5,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 6,
            "type": "object",
          },
        ],
        "function": "create_pool_admin",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "6AMAAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AA==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AA==",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > deauthorizeMarginApp 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "deauthorize_app",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0xb8620c24c9ea1a4a41e79613d2b3d1d93648d1bb6f6b789a7c8f261c94110e4b::margin_manager::MarginApp",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > disableVersion 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "disable_version",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AwAAAAAAAAA=",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > disableVersionWithCorePauseCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "disable_version_pause_cap",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AwAAAAAAAAA=",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000abcd",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > enableEwmaState 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "object",
          },
        ],
        "function": "enable_ewma_state",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > enableVersion 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "enable_version",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AwAAAAAAAAA=",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > initBalanceManagerMap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "init_balance_manager_map",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > mintCorePauseCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "mint_pause_cap",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > removeStableCoin 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "remove_stablecoin",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > revokeCorePauseCap 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
        ],
        "function": "revoke_pause_cap",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq80=",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > setEwmaParams 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 5,
            "type": "object",
          },
        ],
        "function": "set_ewma_params",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AOH1BQAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AF7QsgAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > setTreasuryAddress 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "set_treasury_address",
        "module": "registry",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAur4=",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > unregisterPoolAdmin 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "unregister_pool_admin",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`deepbookAdmin PTB snapshots > updateAllowedVersions 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "update_allowed_versions",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x7c256edbda983a2cd6f946655f4bf3f00a41043993781f8674a7046e8c0e11d1",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x000000000000000000000000000000000000000000000000000000000000ad11",
      },
    },
  ],
}
`;

exports[`flashLoans PTB snapshots > borrowBaseAsset 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "borrow_flashloan_base",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
  ],
}
`;

exports[`flashLoans PTB snapshots > borrowQuoteAsset 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "borrow_flashloan_quote",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
  ],
}
`;

exports[`flashLoans PTB snapshots > returnBaseAsset 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "borrow_flashloan_base",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
    {
      "$kind": "SplitCoins",
      "SplitCoins": {
        "amounts": [
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
        ],
        "coin": {
          "$kind": "NestedResult",
          "NestedResult": [
            0,
            0,
          ],
        },
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "NestedResult",
            "NestedResult": [
              1,
              0,
            ],
          },
          {
            "$kind": "NestedResult",
            "NestedResult": [
              0,
              1,
            ],
          },
        ],
        "function": "return_flashloan_base",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
  ],
}
`;

exports[`flashLoans PTB snapshots > returnQuoteAsset 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "borrow_flashloan_quote",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
    {
      "$kind": "SplitCoins",
      "SplitCoins": {
        "amounts": [
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
        ],
        "coin": {
          "$kind": "NestedResult",
          "NestedResult": [
            0,
            0,
          ],
        },
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "NestedResult",
            "NestedResult": [
              1,
              0,
            ],
          },
          {
            "$kind": "NestedResult",
            "NestedResult": [
              0,
              1,
            ],
          },
        ],
        "function": "return_flashloan_quote",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
  ],
}
`;

exports[`governance PTB snapshots > stake 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
        ],
        "function": "stake",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
  ],
}
`;

exports[`governance PTB snapshots > submitProposal 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "pure",
          },
        ],
        "function": "submit_proposal",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AOH1BQAAAAA=",
      },
    },
  ],
}
`;

exports[`governance PTB snapshots > unstake 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
        ],
        "function": "unstake",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
  ],
}
`;

exports[`governance PTB snapshots > vote 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "generate_proof_as_owner",
        "module": "balance_manager",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
        ],
        "function": "vote",
        "module": "pool",
        "package": "0xd874d2417a55bfa6479bffa06ad950fea144ef93a94cc6c49f32b03e386bbb24",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x3333333333333333333333333333333333333333333333333333333333333333",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq80=",
      },
    },
  ],
}
`;
